testsuite/tests/deriving/should_fail/T19692.stderr

T19692.hs:8:23: error: [GHC-00158]
    • Can't make a derived instance of ‘C1 G1’:
        ‘C1’ is not a stock derivable class (Eq, Show, etc.)
    • In the data declaration for ‘G1’

T19692.hs:10:1: error: [GHC-00158]
    • Can't make a derived instance of ‘C1 G1'’:
        ‘C1’ is not a stock derivable class (Eq, Show, etc.)
    • In the stand-alone deriving instance for ‘C1 G1'’

T19692.hs:14:23: error: [GHC-00158]
    • Can't make a derived instance of ‘C2 G2’:
        ‘C2’ is not a stock derivable class (Eq, Show, etc.)
    • In the data declaration for ‘G2’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:16:1: error: [GHC-00158]
    • Can't make a derived instance of ‘C2 G2'’:
        ‘C2’ is not a stock derivable class (Eq, Show, etc.)
    • In the stand-alone deriving instance for ‘C2 G2'’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:21:23: error: [GHC-00158]
    • Can't make a derived instance of ‘C3 G3’:
        ‘C3’ is not a stock derivable class (Eq, Show, etc.)
    • In the data declaration for ‘G3’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:23:1: error: [GHC-00158]
    • Can't make a derived instance of ‘C3 G3'’:
        ‘C3’ is not a stock derivable class (Eq, Show, etc.)
    • In the stand-alone deriving instance for ‘C3 G3'’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:29:23: error: [GHC-00158]
    • Can't make a derived instance of ‘C4 G4’:
        ‘C4’ is not a stock derivable class (Eq, Show, etc.)
    • In the data declaration for ‘G4’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:31:1: error: [GHC-00158]
    • Can't make a derived instance of ‘C4 G4'’:
        ‘C4’ is not a stock derivable class (Eq, Show, etc.)
    • In the stand-alone deriving instance for ‘C4 G4'’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:35:1: error: [GHC-38178]
    • Can't make a derived instance of ‘C5’:
    • In the stand-alone deriving instance for ‘C5’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:38:1: error: [GHC-38178]
    • Can't make a derived instance of ‘C6 a’:
    • In the stand-alone deriving instance for ‘C6 a’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:43:1: error: [GHC-38178]
    • Can't make a derived instance of ‘C7 a’:
    • In the stand-alone deriving instance for ‘C7 a’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:47:1: error: [GHC-38178]
    • Can't make a derived instance of ‘C8’:
    • In the stand-alone deriving instance for ‘C8’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:52:1: error: [GHC-23244]
    • Can't make a derived instance of ‘C9 Eq’:
        ‘Eq’ is a type class, and can only have a derived instance
        if DeriveAnyClass is enabled
    • In the stand-alone deriving instance for ‘C9 Eq’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:57:1: error: [GHC-23244]
    • Can't make a derived instance of ‘C10 Eq’:
        ‘Eq’ is a type class, and can only have a derived instance
        if DeriveAnyClass is enabled
    • In the stand-alone deriving instance for ‘C10 Eq’

T19692.hs:61:38: error: [GHC-38178]
    • Can't make a derived instance of
        ‘Eq G11’ with the anyclass strategy:
    • In the data declaration for ‘G11’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension

T19692.hs:63:1: error: [GHC-38178]
    • Can't make a derived instance of
        ‘Eq G11'’ with the anyclass strategy:
    • In the stand-alone deriving instance for ‘Eq G11'’
    Suggested fix:
      Perhaps you intended to use the ‘DeriveAnyClass’ extension
